--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"devDependencies": {
 		"@fullhuman/postcss-purgecss": "2.3.0",
 		"@rollup/plugin-commonjs": "^17.0.0",
+		"@rollup/plugin-json": "^4.1.0",
 		"@rollup/plugin-node-resolve": "^11.0.0",
 		"@rollup/plugin-replace": "^3.0.1",
 		"@rollup/plugin-typescript": "^8.0.0",
